fix: corrige o scrollwheel

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="/handsontable/handsontable.full.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <style>
+        #table-container {
+            width: 100vw;
+            height: 90vh;
+            overflow: hidden;
+            bottom: 0;
+            position: absolute;
+        }
+    </style>
+
 </head>
 <body>
 <header>
